--- a/train_benchmark.ipynb
+++ b/train_benchmark.ipynb
@@ -9,24 +9,162 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Microsoft Visual C++ Redistributable is not installed, this may lead to the DLL load failure.\n",
-      "                 It can be downloaded at https://aka.ms/vs/16/release/vc_redist.x64.exe\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import torch # install using $ pip install torch\n",
     "import torch.optim as optim\n",
     "import torch.nn as nn\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "from sklearn.neural_network import MLPRegressor\n",
+    "from sklearn.neural_network import MLPClassifier\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "import os"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Dataset preprocessing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Set dataset locations\n",
+    "emissions_file = \"01_Data/01_Carbon_emissions/AirNow/World_locations_2020_avg.csv\"\n",
+    "selected_output_variable = \"NO2\"\n",
+    "satellite_file = \"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def process_images(image_files):\n",
+    "    \"\"\"\n",
+    "    EDIT LATER\n",
+    "    Load and reshape images into an array where each column represents one image\n",
+    "    Input:\n",
+    "        filepath to folder with images or image filename if already aggregated\n",
+    "    Output:\n",
+    "        tensor of size (resolution * resolution * num_channelss, num_images)\n",
+    "    \"\"\"\n",
+    "    data = np.random((res*res*num_channels, num_images)) # fake data for now\n",
+    "    x_train = torch.tensor(data)\n",
+    "    return x_train"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-26-18880dbee0d2>, line 18)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-26-18880dbee0d2>\"\u001b[1;36m, line \u001b[1;32m18\u001b[0m\n\u001b[1;33m    emissions_data['output'] =\u001b[0m\n\u001b[1;37m                               ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "def process_emissions(emissions_file, selected_output_variable):\n",
+    "    \"\"\"\n",
+    "    Load emission measurements into one column\n",
+    "    Input:\n",
+    "        path to local folder that contains emission file\n",
+    "        selected output variable indicating measurement to be predicted\n",
+    "    Output:\n",
+    "        data frame of size (number of examples, 3) including lat, lon and output\n",
+    "    \"\"\"\n",
+    "    emissions_data = pd.read_csv(emissions_file)\n",
+    "    \n",
+    "    # Filter selected output variable\n",
+    "    emissions_data = emissions_data[emissions_data['type'] == selected_output_variable]\n",
+    "    \n",
+    "    # Distinguish between preprocessing for classification and regression\n",
+    "    if \"AQI\" in selected_output_variable:\n",
+    "        emissions_data['output'] = if emissions_data['value'] <= 50 'good' elif \n",
+    "    else:\n",
+    "        emissions_data['output'] = emissions_data['values']\n",
+    "    \n",
+    "    #emissions_labels = torch.randint(num_categories,(num_images,1)) # fake data\n",
+    "    #emissions = nn.functional.one_hot(emissions_labels, num_categories)\n",
+    "    return emissions[['lat', 'lon', 'output']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def map_emissions_to_images():\n",
+    "    pass"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Train model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# load data\n",
+    "X = process_images(satellite_file)\n",
+    "print(\"size of X: \", X.shape)\n",
+    "y = process_emissions(emissions_file, selected_output_variable)\n",
+    "print(\"size of Y: \", y.shape)\n",
+    "\n",
+    "# Create train/test split\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, random_state=42)\n",
+    "\n",
+    "# Train model\n",
+    "if \"AQI\" in selected_output_variable:\n",
+    "    model = MLPClassifier(random_state=1, max_iter=500).fit(X_train, y_train)\n",
+    "else:\n",
+    "    model = MLPRegressor(random_state=1, max_iter=500).fit(X_train, y_train)\n",
+    "\n",
+    "# Evaluate performance\n",
+    "model.score(X_test, y_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -69,48 +207,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def process_images(image_files):\n",
-    "    \"\"\"\n",
-    "    EDIT LATER\n",
-    "    Load and reshape images into an array where each column represents one image\n",
-    "    Input:\n",
-    "        filepath to folder with images or image filename if already aggregated\n",
-    "    Output:\n",
-    "        tensor of size (resolution * resolution * num_channelss, num_images)\n",
-    "    \"\"\"\n",
-    "    data = np.random((res*res*num_channels, num_images)) # fake data for now\n",
-    "    x_train = torch.tensor(data)\n",
-    "    return x_train"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 102,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def process_emissions(emissions_file):\n",
-    "    \"\"\"\n",
-    "    EDIT LATER\n",
-    "    Load emission measurements into one column\n",
-    "    Input:\n",
-    "        path to local folder that contains emission file\n",
-    "    Output:\n",
-    "        tensor of size (num_images, 1) each labeled with 1 of 6 categories\n",
-    "    \"\"\"\n",
-    "    # emissions_data = pd.read_csv(emissions_file)\n",
-    "    # do things here\n",
-    "    emissions_labels = torch.randint(num_categories,(num_images,1)) # fake data\n",
-    "    emissions = nn.functional.one_hot(emissions_labels, num_categories)\n",
-    "    return emissions"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 128,
    "metadata": {},
    "outputs": [],
@@ -147,84 +243,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 31,
    "metadata": {
     "scrolled": false
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "size of x_train:  torch.Size([12288, 10])\n",
-      "tensor([[[0, 0, 1, 0, 0, 0]],\n",
-      "\n",
-      "        [[0, 1, 0, 0, 0, 0]],\n",
-      "\n",
-      "        [[1, 0, 0, 0, 0, 0]],\n",
-      "\n",
-      "        [[1, 0, 0, 0, 0, 0]],\n",
-      "\n",
-      "        [[0, 0, 0, 0, 0, 1]],\n",
-      "\n",
-      "        [[0, 0, 0, 0, 1, 0]],\n",
-      "\n",
-      "        [[0, 0, 0, 0, 0, 1]],\n",
-      "\n",
-      "        [[0, 1, 0, 0, 0, 0]],\n",
-      "\n",
-      "        [[0, 0, 1, 0, 0, 0]],\n",
-      "\n",
-      "        [[0, 1, 0, 0, 0, 0]]])\n",
-      "size of y_train:  torch.Size([10, 1, 6])\n",
-      "Net(\n",
-      "  (layer1): Linear(in_features=12288, out_features=6, bias=True)\n",
-      ")\n",
-      "tensor([[0.1549, 0.2138, 0.1344, 0.1848, 0.1205, 0.1917],\n",
-      "        [0.1604, 0.2191, 0.1697, 0.1674, 0.1262, 0.1572],\n",
-      "        [0.1449, 0.2203, 0.1378, 0.1757, 0.1509, 0.1704],\n",
-      "        [0.1684, 0.1816, 0.1899, 0.1679, 0.1334, 0.1589],\n",
-      "        [0.1286, 0.1528, 0.1223, 0.2818, 0.1608, 0.1536],\n",
-      "        [0.1415, 0.2410, 0.1527, 0.2084, 0.1041, 0.1523],\n",
-      "        [0.1129, 0.2670, 0.1562, 0.1699, 0.1457, 0.1482],\n",
-      "        [0.1408, 0.2636, 0.1143, 0.2048, 0.0978, 0.1787],\n",
-      "        [0.1652, 0.2135, 0.1446, 0.1838, 0.1430, 0.1500],\n",
-      "        [0.1489, 0.1842, 0.1587, 0.1807, 0.1823, 0.1453]],\n",
-      "       grad_fn=<SoftmaxBackward>)\n",
-      "tensor([[[0, 0, 1, 0, 0, 0]],\n",
-      "\n",
-      "        [[0, 1, 0, 0, 0, 0]],\n",
-      "\n",
-      "        [[1, 0, 0, 0, 0, 0]],\n",
-      "\n",
-      "        [[1, 0, 0, 0, 0, 0]],\n",
-      "\n",
-      "        [[0, 0, 0, 0, 0, 1]],\n",
-      "\n",
-      "        [[0, 0, 0, 0, 1, 0]],\n",
-      "\n",
-      "        [[0, 0, 0, 0, 0, 1]],\n",
-      "\n",
-      "        [[0, 1, 0, 0, 0, 0]],\n",
-      "\n",
-      "        [[0, 0, 1, 0, 0, 0]],\n",
-      "\n",
-      "        [[0, 1, 0, 0, 0, 0]]])\n"
-     ]
-    },
-    {
-     "ename": "RuntimeError",
-     "evalue": "1D target tensor expected, multi-target not supported",
+     "ename": "NameError",
+     "evalue": "name 'res' is not defined",
      "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-129-c42d457dd5a5>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     14\u001b[0m \u001b[1;31m# Train model\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     15\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mnet\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 16\u001b[1;33m \u001b[0mtrain\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mx_train\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0my_train\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;32m<ipython-input-128-65e66ace8315>\u001b[0m in \u001b[0;36mtrain\u001b[1;34m(x_train, y_train)\u001b[0m\n\u001b[0;32m     17\u001b[0m         \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0moutput\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     18\u001b[0m         \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0my_train\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 19\u001b[1;33m         \u001b[0mloss\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcriterion\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0moutput\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0my_train\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     20\u001b[0m         \u001b[0mloss\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mbackward\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     21\u001b[0m         \u001b[0moptimizer\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mstep\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\miniconda3\\lib\\site-packages\\torch\\nn\\modules\\module.py\u001b[0m in \u001b[0;36m_call_impl\u001b[1;34m(self, *input, **kwargs)\u001b[0m\n\u001b[0;32m    725\u001b[0m             \u001b[0mresult\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_slow_forward\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m*\u001b[0m\u001b[0minput\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    726\u001b[0m         \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 727\u001b[1;33m             \u001b[0mresult\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mforward\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m*\u001b[0m\u001b[0minput\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    728\u001b[0m         for hook in itertools.chain(\n\u001b[0;32m    729\u001b[0m                 \u001b[0m_global_forward_hooks\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mvalues\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\miniconda3\\lib\\site-packages\\torch\\nn\\modules\\loss.py\u001b[0m in \u001b[0;36mforward\u001b[1;34m(self, input, target)\u001b[0m\n\u001b[0;32m    211\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    212\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0mforward\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0minput\u001b[0m\u001b[1;33m:\u001b[0m \u001b[0mTensor\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtarget\u001b[0m\u001b[1;33m:\u001b[0m \u001b[0mTensor\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m->\u001b[0m \u001b[0mTensor\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 213\u001b[1;33m         \u001b[1;32mreturn\u001b[0m \u001b[0mF\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mnll_loss\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0minput\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtarget\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mweight\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mweight\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mignore_index\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mignore_index\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mreduction\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mreduction\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    214\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    215\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\miniconda3\\lib\\site-packages\\torch\\nn\\functional.py\u001b[0m in \u001b[0;36mnll_loss\u001b[1;34m(input, target, weight, size_average, ignore_index, reduce, reduction)\u001b[0m\n\u001b[0;32m   2262\u001b[0m                          .format(input.size(0), target.size(0)))\n\u001b[0;32m   2263\u001b[0m     \u001b[1;32mif\u001b[0m \u001b[0mdim\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;36m2\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 2264\u001b[1;33m         \u001b[0mret\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mtorch\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_C\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_nn\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mnll_loss\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0minput\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtarget\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mweight\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0m_Reduction\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mget_enum\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mreduction\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mignore_index\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   2265\u001b[0m     \u001b[1;32melif\u001b[0m \u001b[0mdim\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;36m4\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   2266\u001b[0m         \u001b[0mret\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mtorch\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_C\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_nn\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mnll_loss2d\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0minput\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtarget\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mweight\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0m_Reduction\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mget_enum\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mreduction\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mignore_index\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mRuntimeError\u001b[0m: 1D target tensor expected, multi-target not supported"
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-31-5776c7e19066>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      7\u001b[0m \u001b[1;31m# load data\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 8\u001b[1;33m \u001b[0mx_train\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mprocess_images\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"01_\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      9\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"size of x_train: \"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mx_train\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     10\u001b[0m \u001b[0my_train\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mprocess_emissions\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"foo.csv\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m<ipython-input-9-6714e34af61d>\u001b[0m in \u001b[0;36mprocess_images\u001b[1;34m(image_files)\u001b[0m\n\u001b[0;32m      8\u001b[0m         \u001b[0mtensor\u001b[0m \u001b[0mof\u001b[0m \u001b[0msize\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mresolution\u001b[0m \u001b[1;33m*\u001b[0m \u001b[0mresolution\u001b[0m \u001b[1;33m*\u001b[0m \u001b[0mnum_channelss\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mnum_images\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      9\u001b[0m     \"\"\"\n\u001b[1;32m---> 10\u001b[1;33m     \u001b[0mdata\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mrandom\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mres\u001b[0m\u001b[1;33m*\u001b[0m\u001b[0mres\u001b[0m\u001b[1;33m*\u001b[0m\u001b[0mnum_channels\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mnum_images\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;31m# fake data for now\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     11\u001b[0m     \u001b[0mx_train\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mtorch\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtensor\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     12\u001b[0m     \u001b[1;32mreturn\u001b[0m \u001b[0mx_train\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'res' is not defined"
      ]
     }
    ],
@@ -236,7 +269,7 @@
     "optimizer = optim.SGD(net.parameters(), lr=learning_rate)\n",
     "\n",
     "# load data\n",
-    "x_train = process_images(\"foo/\")\n",
+    "x_train = process_images(\"01_\")\n",
     "print(\"size of x_train: \", x_train.shape)\n",
     "y_train = process_emissions(\"foo.csv\")\n",
     "print(y_train)\n",
@@ -264,7 +297,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
