Added code to train a MultiLayer Perceptron in scikit learn for our proposal model

--- a/train_benchmark.ipynb
+++ b/train_benchmark.ipynb
@@ -94,7 +94,7 @@
     "    \n",
     "    # Distinguish between preprocessing for classification and regression\n",
     "    if \"AQI\" in selected_output_variable:\n",
-    "        emissions_data['output'] = if emissions_data['value'] <= 50 'good' elif \n",
+    "        emissions_data['output'] = emissions_data['AQI_level'] \n",
     "    else:\n",
     "        emissions_data['output'] = emissions_data['values']\n",
     "    \n",
