--- a/train_benchmark.ipynb
+++ b/train_benchmark.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,6 +18,7 @@
     "import torch.nn as nn\n",
     "import numpy as np\n",
     "import pandas as pd\n",
+    "import pickle\n",
     "from sklearn.neural_network import MLPRegressor\n",
     "from sklearn.neural_network import MLPClassifier\n",
     "from sklearn.model_selection import train_test_split\n",
@@ -33,84 +34,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Set dataset locations\n",
-    "emissions_file = \"01_Data/01_Carbon_emissions/AirNow/World_locations_2020_avg.csv\"\n",
-    "selected_output_variable = \"NO2\"\n",
-    "satellite_file = \"\""
+    "selected_output_variable = \"OZONE\"\n",
+    "data_file = \"01_Data/02_Imagery/data_and_imagery_test.pkl\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def process_images(image_files):\n",
+    "def process_data(data_file, selected_output_variable):\n",
     "    \"\"\"\n",
-    "    EDIT LATER\n",
-    "    Load and reshape images into an array where each column represents one image\n",
+    "    Load and reshape images into a numpy array\n",
     "    Input:\n",
-    "        filepath to folder with images or image filename if already aggregated\n",
+    "        filepath to file with matched image and emission data\n",
     "    Output:\n",
-    "        tensor of size (resolution * resolution * num_channelss, num_images)\n",
+    "        numpy array of shape (resolution * resolution * num_channels, num_images)\n",
     "    \"\"\"\n",
-    "    data = np.random((res*res*num_channels, num_images)) # fake data for now\n",
-    "    x_train = torch.tensor(data)\n",
-    "    return x_train"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-26-18880dbee0d2>, line 18)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-26-18880dbee0d2>\"\u001b[1;36m, line \u001b[1;32m18\u001b[0m\n\u001b[1;33m    emissions_data['output'] =\u001b[0m\n\u001b[1;37m                               ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
-   "source": [
-    "def process_emissions(emissions_file, selected_output_variable):\n",
-    "    \"\"\"\n",
-    "    Load emission measurements into one column\n",
-    "    Input:\n",
-    "        path to local folder that contains emission file\n",
-    "        selected output variable indicating measurement to be predicted\n",
-    "    Output:\n",
-    "        data frame of size (number of examples, 3) including lat, lon and output\n",
-    "    \"\"\"\n",
-    "    emissions_data = pd.read_csv(emissions_file)\n",
+    "    # open file\n",
+    "    data = pickle.load(open(data_file, 'rb'))\n",
     "    \n",
-    "    # Filter selected output variable\n",
-    "    emissions_data = emissions_data[emissions_data['type'] == selected_output_variable]\n",
+    "    # filter for output variable\n",
+    "    data = data[data['type'] == selected_output_variable]\n",
     "    \n",
-    "    # Distinguish between preprocessing for classification and regression\n",
-    "    if \"AQI\" in selected_output_variable:\n",
-    "        emissions_data['output'] = emissions_data['AQI_level'] \n",
+    "    # get image dims\n",
+    "    m = len(data)\n",
+    "    res, num_channels = data['imagery'][0].shape[0], data['imagery'][0].shape[2]\n",
+    "    \n",
+    "    # get X data as np array and check dims\n",
+    "    images = np.array(data['imagery'].to_list())\n",
+    "    images = images.reshape(images.shape[0], -1).T\n",
+    "    assert(images.shape == (res*res*num_channels, m))\n",
+    "    \n",
+    "    # get y data as np array and check dims\n",
+    "    if \"AQI\" in selected_output_variable:        # Distinguish between preprocessing for classification and regression\n",
+    "        labels = data['AQI_level'].to_numpy().reshape(1,m)\n",
     "    else:\n",
-    "        emissions_data['output'] = emissions_data['values']\n",
+    "        labels = data['value'].to_numpy().reshape(1,m)\n",
     "    \n",
-    "    #emissions_labels = torch.randint(num_categories,(num_images,1)) # fake data\n",
-    "    #emissions = nn.functional.one_hot(emissions_labels, num_categories)\n",
-    "    return emissions[['lat', 'lon', 'output']]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def map_emissions_to_images():\n",
-    "    pass"
+    "    assert(labels.shape == (1,m))\n",
+    "    \n",
+    "    return images, labels"
    ]
   },
   {
@@ -122,18 +92,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "size of X:  (7, 3468)\n",
+      "size of Y:  (7,)\n",
+      "number of training samples:  5\n",
+      "number of test samples:  2\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "-10.496945859572934"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# load data\n",
-    "X = process_images(satellite_file)\n",
+    "X, y = process_data(data_file, selected_output_variable)\n",
+    "X, y = X.T, np.ravel(y.T) # sklearn likes them transposed and a (m,) shape for y\n",
     "print(\"size of X: \", X.shape)\n",
-    "y = process_emissions(emissions_file, selected_output_variable)\n",
     "print(\"size of Y: \", y.shape)\n",
     "\n",
     "# Create train/test split\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, random_state=42)\n",
+    "print('number of training samples: ', X_train.shape[0])\n",
+    "print('number of test samples: ', X_test.shape[0])\n",
     "\n",
     "# Train model\n",
     "if \"AQI\" in selected_output_variable:\n",
@@ -161,14 +154,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# old code below"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,21 +188,19 @@
     "    \"\"\"\n",
     "    def __init__(self):\n",
     "        super(Net,self).__init__()\n",
-    "        self.layer1 = nn.Linear(res*res*num_channels, num_categories) # One linear layer\n",
+    "        self.layer1 = nn.ReLU() # One linear layer\n",
     "\n",
     "    def forward(self, x):\n",
     "        \"\"\"\n",
     "        Define forward pass\n",
     "        \"\"\"\n",
     "        x = self.layer1(x)\n",
-    "        # x = nn.softmax(x)  # Softmax activation\n",
-    "        x = nn.functional.softmax(x, dim=1)\n",
     "        return x"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -224,11 +217,11 @@
     "    \n",
     "    for epoch in range(1):\n",
     "        optimizer.zero_grad() # zero gradients\n",
-    "        x_train = x_train.reshape(num_images, res*res*num_channels)\n",
+    "        # x_train = x_train.reshape(num_images, res*res*num_channels)\n",
     "        # x_train = x_train.to(torch.float64)\n",
-    "        output = net(x_train.float())\n",
-    "        print(output)\n",
-    "        print(y_train)\n",
+    "        output = net(x_train) #.float())\n",
+    "        # print(output)\n",
+    "        # print(y_train)\n",
     "        loss = criterion(output, y_train)\n",
     "        loss.backward()\n",
     "        optimizer.step()\n",
@@ -243,21 +236,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {
-    "scrolled": false
-   },
+   "execution_count": 24,
+   "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'res' is not defined",
+     "ename": "TypeError",
+     "evalue": "'type' object is not iterable",
      "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-31-5776c7e19066>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      7\u001b[0m \u001b[1;31m# load data\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 8\u001b[1;33m \u001b[0mx_train\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mprocess_images\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"01_\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      9\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"size of x_train: \"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mx_train\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     10\u001b[0m \u001b[0my_train\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mprocess_emissions\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"foo.csv\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m<ipython-input-9-6714e34af61d>\u001b[0m in \u001b[0;36mprocess_images\u001b[1;34m(image_files)\u001b[0m\n\u001b[0;32m      8\u001b[0m         \u001b[0mtensor\u001b[0m \u001b[0mof\u001b[0m \u001b[0msize\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mresolution\u001b[0m \u001b[1;33m*\u001b[0m \u001b[0mresolution\u001b[0m \u001b[1;33m*\u001b[0m \u001b[0mnum_channelss\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mnum_images\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      9\u001b[0m     \"\"\"\n\u001b[1;32m---> 10\u001b[1;33m     \u001b[0mdata\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mrandom\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mres\u001b[0m\u001b[1;33m*\u001b[0m\u001b[0mres\u001b[0m\u001b[1;33m*\u001b[0m\u001b[0mnum_channels\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mnum_images\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;31m# fake data for now\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     11\u001b[0m     \u001b[0mx_train\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mtorch\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtensor\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     12\u001b[0m     \u001b[1;32mreturn\u001b[0m \u001b[0mx_train\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'res' is not defined"
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-24-379b2939ad04>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[0mnet\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mNet\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[0mcriterion\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnn\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mMSELoss\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;31m# nn.CrossEntropyLoss()\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 5\u001b[1;33m \u001b[0moptimizer\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0moptim\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mSGD\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mnn\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mParameterList\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mlr\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m0.05\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      6\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      7\u001b[0m \u001b[1;31m# load data\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\miniconda3\\lib\\site-packages\\torch\\optim\\sgd.py\u001b[0m in \u001b[0;36m__init__\u001b[1;34m(self, params, lr, momentum, dampening, weight_decay, nesterov)\u001b[0m\n\u001b[0;32m     66\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0mnesterov\u001b[0m \u001b[1;32mand\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mmomentum\u001b[0m \u001b[1;33m<=\u001b[0m \u001b[1;36m0\u001b[0m \u001b[1;32mor\u001b[0m \u001b[0mdampening\u001b[0m \u001b[1;33m!=\u001b[0m \u001b[1;36m0\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     67\u001b[0m             \u001b[1;32mraise\u001b[0m \u001b[0mValueError\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"Nesterov momentum requires a momentum and zero dampening\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 68\u001b[1;33m         \u001b[0msuper\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mSGD\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m__init__\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mparams\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdefaults\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     69\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     70\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0m__setstate__\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mstate\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\miniconda3\\lib\\site-packages\\torch\\optim\\optimizer.py\u001b[0m in \u001b[0;36m__init__\u001b[1;34m(self, params, defaults)\u001b[0m\n\u001b[0;32m     43\u001b[0m         \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mparam_groups\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     44\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 45\u001b[1;33m         \u001b[0mparam_groups\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mlist\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mparams\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     46\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mparam_groups\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;36m0\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     47\u001b[0m             \u001b[1;32mraise\u001b[0m \u001b[0mValueError\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"optimizer got an empty parameter list\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mTypeError\u001b[0m: 'type' object is not iterable"
      ]
     }
    ],
@@ -265,19 +257,17 @@
     "# Main\n",
     "\n",
     "net = Net()\n",
-    "criterion = nn.NLLLoss() # nn.CrossEntropyLoss()\n",
-    "optimizer = optim.SGD(net.parameters(), lr=learning_rate)\n",
+    "criterion = nn.MSELoss() # nn.CrossEntropyLoss()\n",
+    "optimizer = optim.SGD(net.parameters(), lr=0.05)\n",
     "\n",
     "# load data\n",
-    "x_train = process_images(\"01_\")\n",
-    "print(\"size of x_train: \", x_train.shape)\n",
-    "y_train = process_emissions(\"foo.csv\")\n",
-    "print(y_train)\n",
-    "print(\"size of y_train: \", y_train.shape)\n",
+    "X, y = process_data(data_file)\n",
+    "print(\"size of X: \", X.shape)\n",
+    "print(\"size of y: \", y.shape)\n",
     "\n",
     "# Train model\n",
     "print(net)\n",
-    "train(x_train, y_train)"
+    "train(X, y)"
    ]
   }
  ],
@@ -297,7 +287,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
