Add trainer hyperparameter tuning models

--- a/train_benchmark.ipynb
+++ b/train_benchmark.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,13 +59,7 @@
     "    data = pickle.load(open(data_file, 'rb'))\n",
     "            \n",
     "    # filter for output variable\n",
-    "    data = data[data['type'] == \"OZONE_AQI\"] #selected_output_variable]\n",
-    "    aqi = np.array(data['AQI_level'])\n",
-    "    unique_vals = np.unique(aqi)\n",
-    "    aqi_good = aqi[aqi=='good']\n",
-    "    aqi_mod = aqi[aqi=='moderate']\n",
-    "    print(len(aqi_good))\n",
-    "    print(len(aqi_mod))\n",
+    "    data = data[data['type'] == selected_output_variable]\n",
     "    \n",
     "    # get image dims\n",
     "    m = len(data)\n",
@@ -96,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -106,16 +100,14 @@
       "Preparing data...\n",
       "\tdata filename:  01_Data/02_Imagery/data_and_imagery_test.pkl\n",
       "\tvariable:  OZONE_AQI\n",
-      "1431\n",
-      "9\n",
       "\tsize of X:  (1440, 3468)\n",
       "\tsize of Y:  (1440,)\n",
       "\tnumber of training samples:  1080\n",
       "\tnumber of test samples:  360\n",
-      "Done (0.098s)\n",
+      "Done (0.116s)\n",
       "\n",
       "Training classifier...\n",
-      "Done (3.153s)\n",
+      "Done (3.109s)\n",
       "\n",
       "Score:  0.9888888888888889\n"
      ]
@@ -171,7 +163,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
